# avdl

./: .gitignore  .gitmodules  BENCHMARKING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LOOPS.md  README.md  SESSION.md  TODOs.md  dist-workspace.toml  loop-prompt.md  post-stream-summary.md
.cargo/: config.toml
.claude/: settings.json
.github/: codecov.yml  dependabot.yml
agent-logs/: LOOPS.md  loop-02.md  loop-03.md  loop-04.md  loop-05.md  loop-06.md  loop-07.md  loop-08.md  loop-09.md  loop-10.md  loop-11.md  loop-12.md  loop-13.md  loop-14.md  loop-15.md  loop-16.md  loop-17.md  loop-18.md  loop-19.md  loop-20.md  loop-21.md
issues/: 01-namespace-not-propagated-in-schema-mode.md  01ee3f73-missing-default-value-type-validation.md  02-reference-inlining-in-schema-mode.md  03-import-drops-primitive-properties.md  04-unknown-logical-types-dropped.md  0422be14-54d8-4a9e-a31e-3f120719496c-named-type-serialization-duplication-in-json.md  05-incomplete-octal-escape-handling.md  06-reference-nodes-cant-carry-properties.md  065fd583-only-first-error-reported.md  07-nested-named-schemas-in-records.md  08-nullable-union-property-targeting.md  085a9c9f-missing-fixdefaultvalue-coercion.md  09-import-protocol-messages-not-merged.md  09db8847-import-warnings-not-propagated.md  0a89662b-stale-indexset-reference-in-claude-md.md  0ae86b3a-import-context-pub-fields.md  0aea052f-regex-unwrap-should-be-expect.md  0b2d18d6-5580-4026-a62f-a5d3af05cfb1-reader-allow-non-upper-case-globals-scope.md  0b893e93-idl-accepts-named-only-schema-mode.md  0b8fd047-bare-at-sign-merges-following-tokens-into-annotation-name.md  0beb2ad6-type-name-lists-partial-overlap.md  0eb51b69-cross-namespace-unqualified-reference-resolution.md  0f6b49e3-field-default-validation-error-path-untested.md  0ff1ddf7-reader-string-escape-edge-cases.md  10-imported-refs-fully-qualified.md  11-doc-comment-fragile-stripping.md  12-strip-indents-regex-and-tests.md  13-primitive-from-str-panics.md  13f8c2d8-idl2schemata-test-uses-shared-known-names.md  14-duplicate-namespace-annotation.md  1498f786-missing-enum-default-validation.md  15-error-messages-lack-source-location.md  15f4f3c1-schema-with-merged-properties-variants-untested.md  16-literal-parsing-should-match-grammar.md  175b7d07-deduplicate-json-comment-stripping.md  17c10dd1-doc-comment-tab-after-star-not-stripped.md  18-import-idl-messages-not-merged.md  19-avsc-import-qualified-names-not-split.md  1948d4f7-readme-missing-float-formatting-divergence.md  1b49abf1-antlr-parse-errors-not-fatal.md  (+191 more)
scripts/: compare-adhoc.sh  compare-golden.sh  regenerate-antlr.sh
src/: compiler.rs  doc_comments.rs  error.rs  idllistener.rs  idlparser.rs  import.rs  lib.rs  main.rs  reader.rs  resolve.rs  suggest.rs
tests/: cli.rs  error_reporting.rs  integration.rs
upstream-issues/: 01780f4c-lexer-errors-not-collected.md  1ec6f2bf-java-crashes-on-out-of-range-int-default.md  4e5bbb52-annotated-message-rejects-type-ref-return.jira.md  4e5bbb52-annotated-message-rejects-type-ref-return.md  82320204-stale-ontheclasspath-golden-file.md  90644028-java-nested-union-produces-empty-array.jira.md  98dd6525-java-npe-forward-ref-in-return-type.md  9f25f286-java-crashes-on-nan-infinity-float-defaults.md  README.md  a555dff4-java-localtimestamp-ms-typo-in-invalid-type-names.md  dafbaa0f-java-crashes-on-duplicate-underlying-type-in-union.md
workflow-prompts/: closed-issue-audit.md  (+6 more)
(+257 files in other folders)
