[package]
name = "avdl"
version = "0.1.0+1.12.1"
edition = "2024"
description = "Port of avro-tools' Avro IDL compiler that compiles .avdl files to Avro Protocol JSON (.avpr) or Schema JSON (.avsc)"
license = "Apache-2.0"
homepage = "https://github.com/jonhoo/avdl"
repository = "https://github.com/jonhoo/avdl"
keywords = ["avro", "idl", "schema", "compiler"]
categories = ["command-line-utilities", "compilers", "parser-implementations"]
include = ["/src/**/*.rs", "/LICENSE", "/README.md"]

[dependencies]
antlr4rust = "0.5.2"
indexmap = "2"
lexopt = "0.3.1"
miette = { version = "7", default-features = false, features = ["fancy"] }
ryu = "1.0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
assert_cmd = "2.1.2"
insta = "1"
predicates = "3.1.3"
pretty_assertions = "1"
